[package]
name = "encrypted-file-cache"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kyle-rader/encrypted-file-cache-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tempfile = "3.3.0"
tokio = { version = "1.17.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.34.0", features = ["alloc", "Security_Cryptography_DataProtection", "Foundation", "Storage_Streams", "Win32_System_WinRT"] }
